# farsi-shell

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  cargo.toml  cross.toml  install.sh
src/: bidi.rs  main.rs  pty.rs  reshaper.rs  text_processor.rs
