a/farsi-shell\Cargo.toml → b/farsi-shell\Cargo.toml
@@ -0,0 +1,17 @@
+[package]
+name = "farsi-shell"
+version = "1.0.0"
+edition = "2021"
+authors = ["Farsi-Shell Contributors"]
+description = "A PTY wrapper for Termux that reshapes and displays Persian/Arabic text correctly"
+license = "MIT"
+
+[dependencies]
+nix = { version = "0.27", features = ["pty", "fs", "poll"] }
+libc = "0.2"
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+strip = true
